added configuration to handle error requests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+# disable the whitelabel error page
+server.error.whitelabel.enabled = false
 
+# map the path to the error page
+server.error.path = /error
