--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,3 +27,13 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B clean package
+
+#    - name: Deploy to MySQL Database
+#      env:
+#        MYSQL_HOST: ${{ secrets.MYSQL_HOST }}
+#        MYSQL_PORT: ${{ secrets.MYSQL_PORT }}
+#        MYSQL_USER: ${{ secrets.MYSQL_USER }}
+#        MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+#        MYSQL_DATABASE: ${{ secrets.MYSQL_DATABASE }}
+#      run: |
+#        java -jar target/miniSurveyMonkey-0.0.1-SNAPSHOT.jar
