--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
 
 spring:
     datasource:
-        url: jdbc:mysql://mini-survey-monkey-sql-server.mysql.database.azure.com:3306/mydb
-        username: myadmin
-        password: sysc4806!
+        url: jdbc:mysql://localhost:3306/mydb
+        username: myuser
+        password: mypassword
     jpa:
         hibernate:
             ddl-auto: create-drop
