--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,7 +10,7 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "milestone1" ]
+    branches: [ "milestone1_charles" ]
 
 jobs:
   build:
