--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,8 @@ server.error.whitelabel.enabled = false
 # map the path to the error page
 server.error.path = /error
 
+# enable restart in production environment
+spring.devtools.restart.enabled = true
+
 spring.thymeleaf.prefix=classpath:/templates/
 spring.web.resources.static-locations=classpath:/static/
