--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,9 @@
     <name>miniSurveyMonkey</name>
     <description>miniSurveyMonkey</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>17</java.version>ch
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
     <dependencies>
         <dependency>
