--- a/pom.xml
+++ b/pom.xml
@@ -65,13 +65,12 @@
         <dependency>
             <groupId>org.ff4j</groupId>
             <artifactId>ff4j-spring-boot-starter</artifactId>
-            <version>1.9</version>
+            <version>1.8.10</version>
         </dependency>
         <dependency>
             <groupId>org.ff4j</groupId>
             <artifactId>ff4j-web</artifactId>
-            <scope>test</scope>
-            <version>1.9</version>
+            <version>2.0.0</version>
         </dependency>
 
     </dependencies>
@@ -88,6 +87,14 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>14</source>
+                    <target>14</target>
                 </configuration>
             </plugin>
         </plugins>
