--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
 #        password: sysc4806!
     jpa:
         hibernate:
+#            ddl-auto: update
             ddl-auto: create-drop
         properties:
             hibernate:
