--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,8 +14,8 @@ spring:
 #        password: sysc4806!
     jpa:
         hibernate:
-            ddl-auto: update
-#            ddl-auto: create-drop
+#            ddl-auto: update
+            ddl-auto: create-drop
         properties:
             hibernate:
                 dialect: org.hibernate.dialect.MySQL8Dialect
